bump arcadedb versions